# SYCL_easy_tutorial

./: .gitignore  CMakeLists.txt  Makefile  README.md  vectorAdd.cpp
include/: devceiProperties.hpp  deviceProperties.hpp  matrixMultiplication.hpp  matrixStencil.hpp  reduction.hpp  vectorAddition.hpp
src/: deviceProperties.cpp
test/: CMakeLists.txt
test/DeviceQuery/: CMakeLists.txt  main.cpp
test/ExecutionModel/: CMakeLists.txt  main.cpp
test/ExecutionModel/include/: NDRangeKernel.hpp  basicKernel.hpp
test/MatrixMultiplication/: CMakeLists.txt  main.cpp
test/MatrixStencil/: CMakeLists.txt  main.cpp
test/Memory/: CMakeLists.txt  main.cpp
test/Reduction/: CMakeLists.txt  main.cpp
test/Stencil/: CMakeLists.txt
test/VectorAddition/: CMakeLists.txt  main.cpp
