# SYCL device info example
add_subdirectory(DeviceQuery)

# SYCL vector addition example
add_subdirectory(VectorAddition)

# SYCL matrix multiplication example
add_subdirectory(MatrixMultiplication)

# SYCL matrix stencil operation example
add_subdirectory(MatrixStencil)

# SYCL reduction example
add_subdirectory(Reduction)

# SYCL Memory
add_subdirectory(Memory)

# SYCL ExecutionModel
add_subdirectory(ExecutionModel)